# screenviz

./: .gitignore  README.md  pyproject.toml  setup.py
example/: config_inc_product.yaml  config_inc_pvalue.yaml  config_rra.yaml  counts.tsv  results.gene_results.tab  results.gene_results.tsv
screenviz/: __init__.py  __main__.py  _constants.py  _utils.py  compare.py  gene.py  idea.py  quality_control.py  sgrna.py
screenviz/cli/: __init__.py  _compare.py  _gene.py  _idea.py  _quality_control.py  _results.py  _sgrna.py
screenviz/qc/: __init__.py  app.py  correlation_matrix_card.py  histogram_membership_card.py  kde_histogram_card.py  scatter_data_card.py  utils.py
screenviz/results/: __init__.py  _utils.py  app.py  gene_card.py  idea_card.py  sgrna_card.py
