[project]
name = "screenviz"
version = "0.2.5"
description = "A tool to visualize the results of 1D CRISPR screens"
authors = [{ name = "noam teyssier" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18.1",
    "idea-bio>=0.2.5",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "dash-daq>=0.5.0",
]

[project.scripts]
screenviz = "screenviz.__main__:main_cli"

[tool.uv]
dev-dependencies = ["ruff>=0.6.8"]
